syntax = "proto3";

service Shard {
  rpc Receive (ExpertOuts) returns (Empty) {}
}

message ExpertOuts {
  bytes data = 1;
  bytes arr_map = 2;
}

message Empty {}
